--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,28 @@
 // Place all the styles related to the posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+/* #### 新規、編集投稿スタイル #### */
+@mixin post-margin {
+  margin: 30px 0 0 40px;
+}
+.post-container {
+  border: 4px outset #cac8c8;
+  border-radius: 1rem;
+  h3 {
+    margin-bottom: 10px;
+  }
+  .post-title {
+    @include post-margin;
+  }
+  .post-content {
+    @include post-margin;
+  }
+  .recommendation {
+    @include post-margin;
+  }
+  .submit {
+    margin: 40px 0 30px;
+    text-align: center;
+  }
+}
