--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,12 @@
   </head>
 
   <body>
-    <%= yield %>
+    <header>
+      <%= link_to '投稿する', new_post_path %>
+      <%= link_to 'ログイン', new_user_session_path %>
+    </header>
+    <div class="container">
+      <%= yield %>
+    </div>
   </body>
 </html>
