--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -2,16 +2,19 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
-/* #### 変数 #### */
+/* #### 変数/関数 #### */
 $post_bg_color: #cac8c8;
 
-/* #### 新規、編集投稿スタイル #### */
 @mixin post-margin {
   margin: 30px 0 0 40px;
 }
-.post-container {
+@mixin post-card {
   border: 4px outset $post_bg_color;
   border-radius: 1rem;
+}
+/* #### 新規、編集投稿スタイル #### */
+.post-container {
+  @include post-card;
   h3 {
     margin-bottom: 10px;
   }
@@ -32,7 +35,7 @@ $post_bg_color: #cac8c8;
 
 /* #### 一覧表示ページ #### */
 .index-post {
-  background-color: $post_bg_color;
+  @include post-card;
   .post-header {
     display: flex;
     a {
@@ -50,7 +53,7 @@ $post_bg_color: #cac8c8;
 
 /* #### 詳細表示ページ #### */
 .show-container {
-  background-color: $post_bg_color;
+  @include post-card;
   .edit-path {
     text-align: right;
     margin-right: 40px;
