--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,4 +14,5 @@
     <h3>内容</h3>
     <p><%= @post.content %></p>
   </div>
+  <div class="post-destroy"><%= link_to '削除', post_path(@post), method: :delete, data: { confirm: '本当に削除してもよろしいですか？' } %></div>
 </main>
