--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -18,13 +18,7 @@ $post_bg_color: #cac8c8;
   h3 {
     margin-bottom: 10px;
   }
-  .post-title {
-    @include post-margin;
-  }
-  .post-content {
-    @include post-margin;
-  }
-  .recommendation {
+  .post-margin {
     @include post-margin;
   }
   .submit {
@@ -66,6 +60,9 @@ $post_bg_color: #cac8c8;
   }
   div {
     margin-left: 40px;
+  }
+  .image-box {
+    text-align: center;
   }
   .show-title {
     display: flex;
