--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,9 @@ $fa-font-path: '@fortawesome/fontawesome-free/webfonts';
 * {
   box-sizing: border-box;
 }
+body {
+  background-color: #e2d6d6;
+}
 .container {
   margin: 0 auto;
   width: 60%;
