--- a/app/views/posts/_like.html.erb
+++ b/app/views/posts/_like.html.erb
@@ -1,3 +1,3 @@
 <%= link_to post_likes_path(post), method: :delete, remote: true do %>
-  <i class="fa-solid fa-thumbs-up"></i>
+  <i id="post-<%= post.id %>" class="fa-solid fa-thumbs-up"></i>
 <% end %>
