--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
     <header class="header">
       <%= render 'layouts/header' %>
     </header>
+    <%= render 'layouts/flash' %>
     <div class="container">
       <%= yield %>
     </div>
