--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,8 @@
     <nav>
       <ul class="d-flex">
         <li><%= link_to '投稿する', new_post_path, class: 'nav-link' %></li>
-        <li><%= link_to 'ログアウト', destroy_user_session_path, class: 'nav-link' %></li>
+        <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: 'nav-link' %></li>
+        <li><%= link_to 'ゲストログイン', users_guest_sign_in_path, method: :post, class: 'nav-link' %></li>
       </ul>
     </nav>
     <img src="#" alt="#">
